--- a/ABSAProject.Console/ABSAProject.Console.csproj
+++ b/ABSAProject.Console/ABSAProject.Console.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RobotGrid.cs" />
+    <Compile Include="RobotGridState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
